Work in progress: Skeleton of lightweight GLiNER and Regex based anonymization toolkit.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /train_custom_spacy_model/train_with_seeds.sh
 /train_custom_spacy_model/run_multi_seed_training.py
 /train_custom_spacy_model/debug_alignment.py
+/deprecated/
