--- a/requirements.in
+++ b/requirements.in
@@ -1,13 +1,9 @@
-fuzzywuzzy
-Levenshtein
-python-Levenshtein
-numpy
-presidio-analyzer>=2.2.0
-presidio-anonymizer>=2.2.0
+# Core dependencies for lightweight GLiNER anonymizer
+gliner
 requests
-spacy==3.8.0
-spacy-legacy
-spacy-loggers
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
-fi-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/fi_core_news_lg-3.8.0/fi_core_news_lg-3.8.0-py3-none-any.whl
 tabulate
+
+# FastAPI server dependencies
+fastapi
+uvicorn[standard]
+pydantic
